[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Pickup.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Sprites/Throwables/stone.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Sound/NFF-thud.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 15.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.0

[node name="Pickup" type="RigidBody2D" index="0"]

input_pickable = false
collision_layer = 4
collision_mask = 1
mode = 0
mass = 1.0
friction = 0.5
bounce = 0.5
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 2.0
angular_velocity = 0.0
angular_damp = 10.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( -2.19756, 3.41842 )
scale = Vector2( 0.15, 0.125 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="PickupArea" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea" index="0"]

shape = SubResource( 2 )

[node name="BumpSoundPlayer" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="body_entered" from="." to="." method="_on_Pickup_body_entered"]

[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]


